--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_APPLICATION_CREDENTIALS=C:\Users\adebl\Desktop\PROJECTS\speakIt\project\speech-to-444008-c99eda0202f2.json
 SECRET_KEY=django-insecure-&%wf04r5@a!f2r1(!+whgn&%5m5=tb^s-=u10pq08=85ig$&l*
 DEBUG=True
+ALLOWED_HOSTS=127.0.0.1,speech-to-text-ai-6l1c.onrender.com
