--- a/requirements.txt
+++ b/requirements.txt
@@ -13,15 +13,19 @@ google-cloud-texttospeech==2.21.1
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
 grpcio-status==1.68.1
+gunicorn==23.0.0
 idna==3.10
 lxml==5.3.0
+packaging==24.2
 proto-plus==1.25.0
 protobuf==5.29.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydub==0.25.1
+# pypiwin32==223
 python-docx==1.1.2
 pyttsx3==2.98
+# pywin32==308
 requests==2.32.3
 rsa==4.9
 SpeechRecognition==3.11.0
