--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 comtypes==1.4.8
 Django==5.1.4
+django-cors-headers==4.6.0
 django-environ==0.11.2
 djangorestframework==3.15.2
 google-api-core==2.23.0
